--- a/src/Payment.css
+++ b/src/Payment.css
@@ -1,51 +1,50 @@
-.payment {
-    background-color: white;
-}
-
-.payment__container > h1 {
-    text-align: center;
-    padding: 10px;
-    font-weight: 400;
-    background-color: rgb(234, 237, 237);
-    border-bottom: 1px solid lightgray;
-}
-
-.payment__container > h1 a {
-    text-decoration: none;
-}
-
-.payment__section {
+.product {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 10px;
     padding: 20px;
-    margin: 0 20px;
-    border-bottom: 1px solid lightgray;
+    width: 100%;
+    max-height: 400px;
+    min-width: 100px;
+    background-color: white;
+    transition: transform 100ms ease-in;
+    z-index: 1;
 }
 
-.payment__title {
-    flex: 0.2;
+.product:hover {
+    transform: scale(1.03);
 }
 
-.payment__address, .payment__items, .payment__details {
-    flex: 0.8;
+.product__rating {
+    display: flex;
+}
+
+.product > img {
+    max-height: 200px;
+    width: 100%;
+    object-fit: contain;
+    margin-bottom: 15px;
 }
   
-.payment__details > form {
-    max-width: 400px;
-}
-
-.payment__details > h3 {
-    padding-bottom: 20px;
-}
-
-
-.payment__details > form > div > button {
+.product > button {
     background: #f0c14b;
-    border-radius: 2px;
-    width: 100%;
-    height: 30px;
     border: 1px solid;
-    font-weight: bolder;
     margin-top: 10px;
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
 }
+  
+.product > button:hover {
+    cursor: pointer;
+}
+
+.product__price {
+    margin-top: 5px;
+}
+  
+.product__info {
+    height: 100px;
+    margin-bottom: 15px;
+}  
